--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "dev": "nodemon src/app.ts"
   },
   "dependencies": {
-    "@derimalec/ytdl-to-mp3": "^1.2.4",
     "@fastify/cors": "^8.3.0",
     "fastify": "^4.18.0",
     "ytdl-core": "^4.11.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.3.1"
   }
 }
