--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fastify/cors": "^8.3.0",
     "fastify": "^4.18.0",
+    "prettier": "^2.8.8",
     "ytdl-core": "^4.11.4"
   },
   "devDependencies": {
