--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -26,8 +26,4 @@ jobs:
         run: yarn ci
 
       - name: Run Prettier
-        uses: wearerequired/lint-action@v1
-        with:
-          # eslint: true
-          prettier: true
-          auto_fix: true
+        run: yarn prettier --write .
