--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: 16
 
       - name: Install dependencies
-        run: yarn ci
+        run: yarn
 
       - name: Run Prettier
         run: yarn prettier --write .
