--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,29 +1,29 @@
-name: Linter
+# name: Linter
 
-on:
-  push:
-    branches:
-      - '*'
-  pull_request:
-    branches:
-      - 'dev'
-      - 'main'
+# on:
+#   push:
+#     branches:
+#       - '*'
+#   pull_request:
+#     branches:
+#       - 'dev'
+#       - 'main'
 
-jobs:
-  prettier:
-    runs-on: ubuntu-latest
+# jobs:
+#   prettier:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
 
-      - name: Install Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
+#       - name: Install Node.js
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: 16
 
-      - name: Install dependencies
-        run: yarn
+#       - name: Install dependencies
+#         run: yarn
 
-      - name: Run Prettier
-        run: yarn prettier --write .
+#       - name: Run Prettier
+#         run: yarn prettier --write .
