--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@fastify/cors": "^8.3.0",
     "fastify": "^4.18.0",
     "prettier": "^2.8.8",
+    "uuid": "^9.0.0",
     "ytdl-core": "^4.11.4"
   },
   "devDependencies": {
-    "@types/node": "^20.3.1"
+    "@types/node": "^20.3.1",
+    "@types/uuid": "^9.0.2"
   }
 }
